[workspace]
resolver = "2"

members = [
    "crates/*",
    "examples/*"
]

[workspace.package]
edition = "2021"
rust-version = "1.82.0"
readme = "README.md"
repository = "https://github.com/marvin-hansen/buildutils"
homepage = "https://github.com/marvin-hansen/buildutils"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>"]
categories = ["development-tools::build-utils"]

license = "MIT"

# Linting with clippy
[workspace.lints.clippy]
all = "warn"

# Linting strict mode
[workspace.lints.rust]
# Warnings
deprecated-safe = "warn"
deprecated_safe_2024 = "warn"


[workspace.dependencies]
# ==============
# Internal Aliases
# ==============
docker_utils = { path = "crates/docker_utils", version = "0.1" }
service_utils = { path = "crates/service_utils", version = "0.1" }
wait_utils = { path = "crates/wait_utils", version = "0.1" }
service_example = { path = "examples/service_example" }
# ==============
# External crates
# ==============
bon = {version = "3.3"}
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1.0",features = ["derive"]}
tokio = { version = "1", default-features = false, features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tonic = { version = "0.12.1", features = ["transport"] }
tonic-health = { version = "0.12.3", default-features = false, features = ["transport"] }
warp = {version = "0.3"}


# Optimize all crates
[profile.release]
opt-level = 3
strip = true  # Automatically strip debug symbols from the binary
lto = true    # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization

# There's a Cargo feature named profile-overrides
# that lets you override the optimization level of dependencies.
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html
[profile.release.package."*"]
opt-level = 3
strip = 'debuginfo'  # Automatically strip debug infos from the binary to reduce size
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization