# Make all aliases public by default
package(default_visibility = ["//visibility:public"])

###############################################################################
# Common
###############################################################################

alias(
    name = "common_container",
    actual = "//crates/common_container",
)

###############################################################################
# Utils
###############################################################################

alias(
    name = "docker_utils",
    actual = "//crates/docker_utils",
)

alias(
    name = "wait_utils",
    actual = "//crates/wait_utils",
)
