# Make all aliases public by default
package(default_visibility = ["//visibility:public"])

###############################################################################
# Utils
###############################################################################

alias(
    name = "docker_utils",
    actual = "//crates/docker_utils",
)

alias(
    name = "service_utils",
    actual = "//crates/service_utils",
)

alias(
    name = "wait_utils",
    actual = "//crates/wait_utils",
)


###############################################################################
# Examples
###############################################################################

alias(
    name = "service_example",
    actual = "//examples/service_example",
)