load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "common_container",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "common",
        "common_container",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Internal crates
        "//alias:wait_utils",
    ],
)

rust_doc(
    name = "doc",
    crate = ":common_container",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":common_container",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
