[package]
name = "docker_utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true


[[example]]
name = "postgres_example"
path = "example/main.rs"


[lints]
workspace = true


[dependencies]
# Internal crates
common_container = {workspace = true}
wait_utils = {workspace = true}
# External crates
tokio = {workspace = true}

