load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library", "rust_test")

rust_library(
    name = "service_utils",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "service_utils",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Internal crates
        "//alias:wait_utils",
        # External crates
        "//thirdparty/crates:bon",
    ],
)

rust_doc(
    name = "doc",
    crate = ":service_utils",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":service_utils",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
