[package]
name = "service_utils"
version = "0.1.0"
description = "Utilities for service integration testsing"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
authors.workspace = true
license.workspace = true


[lints]
workspace = true


[dependencies]
# Internal crates
wait_utils = {workspace = true}
# External crates
bon = { workspace = true }
