[package]
name = "wait_utils"
version = "0.1.0"
description = "Utilities for implementing wait loops using varies wait strategies"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true


[lints]
workspace = true


[dependencies]
tokio = {workspace = true}
tonic = { workspace = true }
tonic-health = { workspace = true }