load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_binary")

rust_binary(
    name = "docker_util_example",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/main.rs",
    tags = [
        "docker_util_example",
        "utils-test",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Internal crates
        "//alias:docker_utils",
    ],
)

rust_doc(
    name = "doc",
    crate = ":docker_util_example",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":docker_util_example",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
