[package]
name = "docker_utils_example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

publish = false


[lib]
path = "src/fakelib.rs"


[lints]
workspace = true


[dependencies]
# Internal crates
docker_utils = {workspace = true}
