load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc", "rust_doc_test")

rust_binary(
    name = "service_example",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/main.rs",
    tags = [
        "service_example",
        "utils-test",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Internal crates
        "//alias:docker_utils",
        # External crates
        "//thirdparty/crates:serde",
        "//thirdparty/crates:tokio",
        "//thirdparty/crates:warp",
    ],
)

rust_doc(
    name = "doc",
    crate = ":service_example",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":service_example",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
