[package]
name = "service_utils_example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal crates
service_utils   = {workspace = true}
# External crates
serde = { workspace = true}
tokio = { workspace = true }
warp = { workspace = true }

[lints]
workspace = true
