[package]
name = "service_utils_example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

publish = false


[lib]
path = "src/fakelib.rs"


# For testing
[dev-dependencies]# Internal crates
service_example = {workspace = true}
service_utils   = {workspace = true}
# External crates
reqwest = { workspace = true }
serde = {workspace = true}
tokio = { workspace = true }

[lints]
workspace = true
