load("@rules_rust//rust:defs.bzl", "rust_test_suite")

rust_test_suite(
    name = "tests",
    srcs = glob([
        "*_tests.rs",
    ]),
    tags = [
        "common",
        "common_container",
        "unit-test",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate to test
        "//alias:common_container",
    ],
)
