load("@rules_rust//rust:defs.bzl", "rust_test_suite")

rust_test_suite(
    name = "integration_tests",
    srcs = glob([
        "docker_util_tests.rs",
    ]),
    exec_properties = {
        # Tell BuildBuddy to run this test using a Firecracker microVM.
        "test.workload-isolation-type": "firecracker",
        # Tell BuildBuddy to ensure that the Docker daemon is started
        "test.init-dockerd": "true",
        # Tell BuildBuddy to preserve the microVM state across test runs.
        "test.recycle-runner": "true",
        # We don't want different different db tests to be assigned to the same recycled runner,
        # because we can't fit all db docker images with the default disk limit.
        "test.runner-recycling-key": "docker_utils_integration_test",
    },
    tags = [
        "integration_test",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate under test
        "//alias:docker_utils",
        # Internal crates

        # External crates
        "//thirdparty/crates:tokio",
    ],
)

rust_test_suite(
    name = "unit_tests",
    srcs = glob([
        "container_config_tests.rs",
    ]),
    tags = [
        "unit-test",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Crate to test
        "//alias:docker_utils",
    ],
)
